Fixed dropdown spacing and color.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 :root {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: calc(0.9em + 1vw);
+    font-size: calc(0.5em + 1vw);
 }
 
 * {
@@ -12,6 +12,17 @@
 html, body {
     width: 100%;
     height: 100%;
+}
+
+main {
+    position: absolute;
+    margin: 2rem, 2rem, 2rem, 50rem;
+    padding: 2rem;
+}
+
+header {
+    width: 100%;
+    text-align: center;
 }
 
 nav {
@@ -29,19 +40,20 @@ nav ul {
     top: 0;
     left: 0;
     z-index: 1000;
+    box-shadow: 0px 0px 8px 0px rgba(0,0,0,2);
 }
 
 nav li {
     display: inline-block;
     padding: 1em;
+    color: black;
+    font-size: 1em;
 }
 
 /* Dropdown Button */
 .dropbtn {
-    background-color: aqua;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
+    background-color: cornflowerblue;
+    font-size: 1em;
     border: none;
 }
 
@@ -55,7 +67,7 @@ nav li {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: blue;
+    background-color: cornflowerblue;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,2);
     z-index: 1;
@@ -82,21 +94,6 @@ nav li {
     background-position: center;
     background-size: cover;
     position: absolute;
-}
-
-body {
-
-}
-
-header {
-    width: 100%;
-    text-align: center;
-}
-
-main {
-    position: absolute;
-    margin: 2rem, 2rem, 2rem, 50rem;
-    padding: 5rem;
 }
 
 h1 {
